<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_create_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_database" />

    <Button
        android:id="@+id/btn_delete_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete_database" />

    <Button
        android:id="@+id/btn_create_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_table" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_del_table"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_del_table" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rad_btn_tbllop"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:text="@string/tbllop" />

            <RadioButton
                android:id="@+id/rad_btn_tblsinhvien"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:text="@string/tblsinhvien" />

        </RadioGroup>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/next" />

</LinearLayout>