<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ManagerStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_masinhvien"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_masv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_sinhvien"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_tensv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_malop"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_malop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_ins_sv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/btn_ins_lop"
            android:src="@drawable/add_student" />

        <ImageButton
            android:id="@+id/btn_update_sv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/btn_ins_lop"
            android:src="@drawable/edit_student" />

        <ImageButton
            android:id="@+id/btn_del_sv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/btn_ins_lop"
            android:src="@drawable/delete_student" />

        <ImageButton
            android:id="@+id/btn_load_sv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/btn_load_lop"
            android:src="@drawable/load" />
    </LinearLayout>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/txt_danhsachsinhvien"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lv_danhsachsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>